force-app/main/default/objects/Graduation_Application__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Reqs_Description_Graduand__c</fullName>
        <description>Graduands additional requirements free text</description>
        <label>Additional Reqs Description - Graduand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Reqs_Description_Guest__c</fullName>
        <description>Guests additional requirements free text</description>
        <label>Additional Reqs Description - Guest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Reqs_Description_Staff__c</fullName>
        <description>Staff additional requirements free text</description>
        <label>Additional Reqs Description - Staff</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Reqs_Graduand__c</fullName>
        <description>Graduands selected additional requirements</description>
        <label>Additional Reqs - Graduand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auslan</fullName>
                </value>
                <value>
                    <fullName>Aisle seating</fullName>
                </value>
                <value>
                    <fullName>Wheelchair access</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Reqs_Guest__c</fullName>
        <description>Guests selected additional requirements</description>
        <label>Additional Reqs - Guest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auslan</fullName>
                </value>
                <value>
                    <fullName>Aisle seating</fullName>
                </value>
                <value>
                    <fullName>Wheelchair access</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <description>Attendance mode for the Application</description>
        <label>Attendance Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attending</fullName>
                </value>
                <value>
                    <fullName>In Absentia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Name_Change_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No approved or rejected email is sent to the student if this is checked</description>
        <inlineHelpText>No approved or rejected email is sent to the student if this is checked</inlineHelpText>
        <label>Do Not Send Name Change Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Writeback_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the next writeback will also trigger a document writeback</description>
        <label>Document Writeback Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Attendance_Fee_Unit_Amount__c</fullName>
        <description>Per application reference for the price of a single attendance fee</description>
        <label>Expected Attendance Fee Unit Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Graduation_Calendar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Calendar representing the Graduation period</description>
        <label>Graduation Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Graduation Applications</relationshipLabel>
        <relationshipName>Graduation_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Late_Fee_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, late fee is not charged</description>
        <label>Has Late Fee Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Payment_Pending_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal state tracking used by GCP portal</description>
        <label>Has Payment Pending State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <description>External Id used by GCP</description>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Edited_By_Email__c</fullName>
        <description>The user which GCP edited this application on behalf of</description>
        <externalId>true</externalId>
        <label>Last Edited By (Email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Edited_By_Monash_Object_Id__c</fullName>
        <description>The user which GCP edited this application on behalf of</description>
        <externalId>true</externalId>
        <label>Last Edited By (Monash Object Id)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Application_Deadline__c</fullName>
        <description>Copy of the Late End Date Value in the Calendar</description>
        <label>Late Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Num_of_Awards_Attending_f__c</fullName>
        <description>Number of Awards attending with Is Attending Ceremony = true</description>
        <label>Number of Awards (Attending)</label>
        <summaryFilterItems>
            <field>Graduation_Award__c.Cancellation_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Graduation_Award__c.Is_Attending_Ceremony__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Graduation_Award__c.Graduation_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Awards_Total_f__c</fullName>
        <description>Number of Awards</description>
        <label>Number of Awards (Total)</label>
        <summaryFilterItems>
            <field>Graduation_Award__c.Cancellation_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Graduation_Award__c.Graduation_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendance_Fee_Charged_Net_f__c</fullName>
        <description>Number of attendance fees less the number of refunded attendance fees</description>
        <formula>Number_of_Attendance_Fee_Charged_f__c -  Number_of_Attendance_Fee_Refunded_f__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Attendance Fee Charged Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendance_Fee_Charged_f__c</fullName>
        <description>Number of attendance fees</description>
        <label>Number of Attendance Fee Charged</label>
        <summarizedField>Graduation_Payment__c.Attendance_Fee_Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Graduation_Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>Graduation_Payment__c.Graduation_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendance_Fee_Refunded_f__c</fullName>
        <description>Number of refunded attendance fees</description>
        <label>Number of Attendance Fee Refunded</label>
        <summarizedField>Graduation_Payment__c.Attendance_Fee_Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Graduation_Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Graduation_Payment__c.Origin__c</field>
            <operation>equals</operation>
            <value>Graduation Portal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Graduation_Payment__c.Refund_Status__c</field>
            <operation>equals</operation>
            <value>Requested, Actioned, Succeeded, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>Graduation_Payment__c.Graduation_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendance_Fee_Waivers__c</fullName>
        <description>Number of attendance fee waivers</description>
        <label>Number of Attendance Fee Waivers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Writeback_Errors_f__c</fullName>
        <description>Number of Awards with an outstanding writeback failure</description>
        <label>Number of Writeback Errors</label>
        <summaryFilterItems>
            <field>Graduation_Award__c.Last_Callista_Writeback_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Graduation_Award__c.Callista_Writeback_Requested_Time__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Graduation_Award__c.Graduation_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Pending_State_Expiry__c</fullName>
        <description>Once this has passed, Payment Pending State is considered stale</description>
        <label>Payment Pending State Expiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Pending_State__c</fullName>
        <description>Internal state tracking for GCP</description>
        <label>Payment Pending State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Refunds_f__c</fullName>
        <description>Number of refunds requested but not yet actioned</description>
        <label>Pending Refunds</label>
        <summaryFilterItems>
            <field>Graduation_Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Graduation_Payment__c.Refund_Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </summaryFilterItems>
        <summaryForeignKey>Graduation_Payment__c.Graduation_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Staff_Comments__c</fullName>
        <description>Comments from staff</description>
        <label>Staff Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current state of Application</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Internal Draft</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Legal_Name__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Legal name of the student from Contact</description>
        <formula>Student__r.First_Name__c + &quot; &quot; + Student__r.Last_Name__c</formula>
        <label>Student Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Person_Id__c</fullName>
        <description>Contact&apos;s Student ID</description>
        <formula>Student__r.Person_ID_unique__c</formula>
        <label>Student Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Personal_Email__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Personal email of the student as entered on form</description>
        <label>Student Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Testamur_Name_Change_Status__c</fullName>
        <description>Current state of the name change request</description>
        <label>Student Testamur Name Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Testamur_Name_Reject_Reason__c</fullName>
        <description>Reason for rejecting the name change request</description>
        <label>Student Testamur Name Reject Reason</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Testamur_Name__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Student name as it will appear on the testamur</description>
        <label>Student Testamur Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Student contact associated with the Application</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Graduation Applications</relationshipLabel>
        <relationshipName>Graduation_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Ensure that duplicate applications can&apos;t exist for a student</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Writeback_Status_f__c</fullName>
        <description>Show a visual &quot;error&quot; or &quot;ok&quot; status depending on presence of writeback errors</description>
        <formula>IF(
  ISPICKVAL(Status__c, &quot;Applied&quot;) || ISPICKVAL(Status__c, &quot;Cancelled&quot;),
  IF(
    Number_of_Writeback_Errors_f__c &gt; 0,
    IMAGE(&quot;/resource/icon_cross_red&quot;, &quot;Error&quot;, 18, 18),
    IMAGE(&quot;/resource/icon_tick_green&quot;, &quot;OK&quot;, 18, 18)
  ),
  &apos;N/A&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Writeback Status</label>
        <type>Text</type>
    </fields>
    <label>Graduation Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Student_Person_Id__c</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Graduation_Calendar__c</columns>
        <columns>Attendance_Mode__c</columns>
        <columns>Status__c</columns>
        <columns>Pending_Refunds_f__c</columns>
        <columns>Student_Personal_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2024_Calendar_Applications</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Graduation_Calendar__c</columns>
        <columns>Attendance_Mode__c</columns>
        <columns>Status__c</columns>
        <columns>Pending_Refunds_f__c</columns>
        <columns>Student_Personal_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Graduation_Calendar__c</field>
            <operation>contains</operation>
            <value>2024</value>
        </filters>
        <label>2024 Calendar Applications</label>
    </listViews>
    <listViews>
        <fullName>X2025_Calendar_Applications</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Student_Person_Id__c</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Graduation_Calendar__c</columns>
        <columns>Attendance_Mode__c</columns>
        <columns>Status__c</columns>
        <columns>Pending_Refunds_f__c</columns>
        <columns>Student_Personal_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Graduation_Calendar__c</field>
            <operation>contains</operation>
            <value>GRAD-MI</value>
        </filters>
        <label>2025 Calendar Applications</label>
    </listViews>
    <nameField>
        <displayFormat>GAPP-{0000000}</displayFormat>
        <label>Graduation Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graduation Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Applied_App_Cant_Become_Draft</fullName>
        <active>true</active>
        <description>Don&apos;t allow Status to be changed from Applied to Draft</description>
        <errorConditionFormula>NOT($Permission.Graduations_Admin)
&amp;&amp;
ISPICKVAL(PRIORVALUE(Status__c), &apos;Applied&apos;)
&amp;&amp; 
(ISPICKVAL(Status__c, &apos;Draft&apos;) || ISPICKVAL(Status__c, &apos;Internal Draft&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Application Status can&apos;t be changed from Applied to Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Attendance_Fee_Waivers_Only_Increase</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Number_of_Attendance_Fee_Waivers__c)
&amp;&amp;
Number_of_Attendance_Fee_Waivers__c &lt; PRIORVALUE(Number_of_Attendance_Fee_Waivers__c)
&amp;&amp;
ISPICKVAL(Status__c,&quot;Applied&quot;)</errorConditionFormula>
        <errorDisplayField>Number_of_Attendance_Fee_Waivers__c</errorDisplayField>
        <errorMessage>Number of attendance fee waivers can&apos;t be decreased</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Change_Reason_Not_Provided</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Student_Testamur_Name_Change_Status__c, &apos;Rejected&apos;)
&amp;&amp; 
ISBLANK(Student_Testamur_Name_Reject_Reason__c)</errorConditionFormula>
        <errorDisplayField>Student_Testamur_Name_Reject_Reason__c</errorDisplayField>
        <errorMessage>Reject Reason can not be blank</errorMessage>
    </validationRules>
</CustomObject>